<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activitiy_header_height"
        android:layout_alignParentTop="true"
        android:padding="0dp"
        android:background="@drawable/menu_header" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/header_title_width"
            android:layout_height="@dimen/header_title_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/wikitrack_header_title" />
        
             <ImageView
            android:id="@+id/vertical_line_dark"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/vertical_line_light"
            android:background="#9b9b9b" />

        <ImageView
            android:id="@+id/vertical_line_light"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/showcase:preferences"
            android:background="#cbcbcb" />

        <TextView
            android:id="@+id/showcase:preferences"
            style="@style/wiki_items_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/menu_item_background"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/en_settings"
            android:textSize="16sp"
            android:textStyle="bold" />

<!--         <ImageView -->
<!--             android:id="@+id/showcase:preferences" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignParentRight="true" -->
<!--             android:layout_centerVertical="true" -->
<!--             android:layout_marginRight="10dp" -->
<!--             android:background="@drawable/menu_item_background" -->
<!--             android:clickable="true" -->
<!--             android:src="@drawable/ic_menu_preferences_005" /> -->
    </RelativeLayout>

    <!-- <LinearLayout -->
    <!-- android:id="@+id/wiki_title" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_weight="2.5" -->
    <!-- android:layout_height="0dp" -->
    <!-- android:gravity="center_horizontal" -->
    <!-- android:orientation="vertical" > -->


    <!-- <TextView -->
    <!-- android:id="@+id/wikitrack_text" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginBottom="20dp" -->
    <!-- android:layout_marginTop="20dp" -->
    <!-- android:text="@string/String:wikitrack_text" -->
    <!-- android:textColor="@color/black" -->
    <!-- android:textSize="26sp" /> -->


    <!-- <ImageView -->
    <!-- android:id="@+id/kannada_text" -->
    <!-- android:layout_width="100.3dp" -->
    <!-- android:layout_height="55.3dp" -->


    <!-- android:src="@drawable/kannada_title" /> -->
    <!-- </LinearLayout> -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/recent_changes"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activitiy_header_height"
                android:layout_margin="5dp"
                android:background="@drawable/menu_item_background"
                android:drawableTop="@drawable/line_divider"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/kn_recent_changes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/activity_background" />

            <TextView
                android:id="@+id/my_contributions"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activitiy_header_height"
                android:layout_margin="5dp"
                android:background="@drawable/menu_item_background"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/kn_my_contributions"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/activity_background" />

            <TextView
                android:id="@+id/my_watchlist"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activitiy_header_height"
                android:layout_margin="5dp"
                android:background="@drawable/menu_item_background"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/kn_my_watchlist"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/activity_background" />

            <!-- <TextView -->
            <!-- android:id="@+id/showcase_favorites" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="@dimen/activitiy_header_height" -->
            <!-- android:background="@drawable/menu_item_background" -->
            <!-- android:gravity="left" -->
            <!-- android:padding="5dp" -->
            <!-- android:layout_margin="5dp" -->
            <!-- android:text="@string/kn_favorite_pages" -->
            <!-- android:textAppearance="?android:attr/textAppearanceLarge" -->
            <!-- android:textColor="@color/black" /> -->


            <!-- <TextView -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="0.5dp" -->
            <!-- android:background="@color/activity_background" /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/more_apps"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/activitiy_header_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_item_background"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/kn_more_apps"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/activity_background" />
        </LinearLayout>
    </ScrollView>

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:background="@color/grey" -->
    <!-- android:weightSum="8" -->
    <!-- > -->


    <!-- <TextView -->
    <!-- android:id="@+id/textView1" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_weight="4" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center_vertical" -->
    <!-- android:padding="10dp" -->
    <!-- android:textStyle="italic" -->
    <!-- android:textColor="@color/white" -->
    <!-- android:text="@string/copyright_saaranga_infotech" /> -->


    <!-- <ImageView -->
    <!-- android:id="@+id/showcase_mail_us" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center_vertical" -->
    <!-- android:layout_weight="1" -->
    <!-- android:src="@drawable/ic_mail" /> -->


    <!-- <ImageView -->
    <!-- android:id="@+id/showcase_twitter" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center_vertical" -->
    <!-- android:layout_weight="1" -->
    <!-- android:src="@drawable/twitter" /> -->


    <!-- <ImageView -->
    <!-- android:id="@+id/showcase_facebook" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="40dp" -->
    <!-- android:layout_gravity="center_vertical" -->
    <!-- android:layout_weight="1" -->
    <!-- android:src="@drawable/facebook" /> -->


    <!-- <ImageView -->
    <!-- android:id="@+id/showcase_saaranga_site" -->
    <!-- android:layout_width="0dp" -->
    <!-- android:layout_height="35dp" -->
    <!-- android:layout_gravity="center_vertical" -->
    <!-- android:layout_margin="5dp" -->
    <!-- android:layout_weight="1" -->
    <!-- android:src="@drawable/saaranga_favicon" /> -->


    <!-- </LinearLayout> -->

    <SlidingDrawer
        android:id="@+id/slidingDrawer1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <LinearLayout
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/handle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transperant_float_container"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/expander_ic_maximized"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Tap here"
                android:textColor="@color/black" />

            <!-- <ImageView -->
            <!-- android:id="@+id/handle_button" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:padding="5dp" -->
            <!-- android:src="@drawable/expander_ic_maximized" -->
            <!-- /> -->

        </LinearLayout>

        <TableLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transperant_float_container"
            android:stretchColumns="2" >

            <TableRow>

                <TextView
                    android:id="@+id/drawer_mail"
                    style="@style/drawer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:drawableLeft="@drawable/mail_icon"
                    android:text="Mail us" />

                <TextView
                    android:id="@+id/drawer_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/twitter_icon"
                     style="@style/drawer_text"
                    android:text="Follow us" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/drawer_like"
                    style="@style/drawer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:drawableLeft="@drawable/facebook_icon"
                    android:text="Like us" />

                <TextView
                    android:id="@+id/drawer_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/saaranga_new_icon"
                     style="@style/drawer_text"
                    android:text="Visit us" />
                        </TableRow>
        </TableLayout>
    </SlidingDrawer>

</RelativeLayout>